# xorshift

./: .gitignore  CMakeLists.txt  README.md  build.hs
include/: CMakeLists.txt  xoroshiro.hpp  xorshift.hpp
test/: CMakeLists.txt  prng.cpp  xoroshiro128.cpp  xorshift128.cpp
